# flash_erase_project

./: .cproject  .gitignore  .project  .projectlinkstore  SPI_BUG_DOCUMENTATION.md  app.c  flash_data_manager.c  flash_data_manager.h  flash_driver.c  flash_driver.h  flash_erase_project.pintool  flash_erase_project.slcp  flash_erase_project.slps  imported_project_report.html  main.c  rtt_output.txt  sensor_types.h  sl_gatt_service_device_information_override.c
.claude/: settings.local.json
.pdm/: uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .bt_soc_empty_works.i2cspminst.cedit  .bt_soc_empty_worksV2.bootloader_interface.cedit  .bt_soc_empty_worksV2.bootloader_spiflash_storage.cedit  .bt_soc_empty_worksV2.emlib_gpio_simple_initpin0.cedit  .bt_soc_empty_worksV2.i2cspmI2C0.cedit  .bt_soc_empty_worksV2.i2cspmI2C1.cedit  .bt_soc_empty_worksV2.i2cspminst.cedit  .bt_soc_empty_worksV2.nvm3_default_config.cedit  .bt_soc_empty_worksV2.nvm3_default_flash_backend.cedit  .bt_soc_empty_worksV2.spidrvinst.cedit
autogen/: gatt_db.c  gatt_db.h  gen.properties  linkerfile.ld  sl_bluetooth.c  sl_bluetooth.h  sl_component_catalog.h  sl_emlib_gpio_simple_init.c  sl_event_handler.c  sl_event_handler.h  sl_i2cspm_init.c  sl_i2cspm_instances.h  sl_iostream_handles.c  sl_iostream_handles.h  sl_power_manager_handler.c  sl_spidrv_init.c  sl_spidrv_instances.h  sli_psa_config_autogen.h
cmake_gcc/: CMakeLists.txt  CMakePresets.json  flash_erase_project.cmake  flash_erase_project_project.cmake
config/: SEGGER_RTT_Conf.h  app_assert_config.h.bak0  btl_interface_cfg.h  btl_interface_cfg.h.bak0  pin_config.h  psa_crypto_config.h  sl_bgapi_config.h  sl_bluetooth_config.h  sl_bluetooth_config.h.bak0  sl_board_control_config.h.bak0  sl_bt_host_adaptation_config.h.bak0  sl_btctrl_config.h  (+22 more)
(+7 files in other folders)
